--- a/home.html
+++ b/home.html
@@ -85,9 +85,9 @@
             <a href="./about-us.html"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">درباره
               ما</a>
-            <a href="#"
+            <a href="#classes"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">کلاس‌ها</a>
-            <a href="#"
+            <a href="#schedule"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">برنامه‌ها</a>
             <a href="./contact-us.html"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">تماس
