--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
                   class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] font-[BnazaninBold] text-4xl md:ps-12">جیمسو
                   فیتنس</a>
               </div>
-              <div class="hidden lg:block sm:mr-6" dir="rtl">
-                <div class="flex space-x-4">
+              <div class="hidden lg:block sm:mr-3" dir="rtl">
+                <div class="flex space-x-2">
                   <a href="./home.html"
                     class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">خانه</a>
                   <a href="./about-us.html"
@@ -55,6 +55,8 @@
                     class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">کلاس‌ها</a>
                   <a href="#schedule"
                     class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">برنامه‌ها</a>
+                  <a href="./membership.html"
+                    class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">عضویت</a>
                   <a href="./contact-us.html"
                     class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">تماس
                     با
@@ -89,6 +91,8 @@
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">کلاس‌ها</a>
             <a href="#schedule"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">برنامه‌ها</a>
+            <a href="./membership.html"
+              class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">عضویت</a>
             <a href="./contact-us.html"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">تماس
               با
