--- a/home.html
+++ b/home.html
@@ -155,7 +155,7 @@
             تجاری شما است.
             با استفاده از Bootstrap v4.2.1 استفاده می‌کند. استفاده رایگان است.
           </p>
-          <a href="#"
+          <a href="./membership.html"
             class="bg-[#F13A12] font-[Gandom] text-lg text-white text-center px-6 py-3 rounded-sm hover:bg-white hover:text-[#F13A12] transition-all duration-[0.3s]">همین
             امروز عضو شوید</a>
         </div>
