--- a/contact-us.html
+++ b/contact-us.html
@@ -121,6 +121,52 @@
         </header>
         <!-- HEADER END -->
 
+        <!-- CONTACT START -->
+        <section class="contact py-16" id="contact">
+            <div class="container mx-auto">
+                <div class="flex flex-col lg:flex-row lg:space-x-8 space-y-8 lg:space-y-0 p-36">
+
+                    <!-- FORM SECTION -->
+                    <div class="lg:w-1/2 w-full" dir="rtl">
+                        <h2 class="text-4xl text-[#25262A] font-[BnazaninBold] mb-6">هر سوالی دارید بپرسید</h2>
+
+                        <form action="#" method="post" class="space-y-6" role="form">
+                            <input type="text"
+                                class="form-input w-full p-4 border border-[#ced4da] rounded-sm font-[Gandom] placeholder-[#666262] focus:outline-none focus:border-[#171819] focus:ring-0"
+                                name="cf-name" placeholder="نام" />
+                            <input type="email"
+                                class="form-input w-full p-4 border border-[#ced4da] rounded-sm font-[Gandom] placeholder-[#666262] focus:outline-none focus:border-[#171819] focus:ring-0"
+                                name="cf-email" placeholder="ایمیل" />
+                            <textarea
+                                class="form-textarea w-full p-4 border border-[#ced4da] rounded-sm font-[Gandom] placeholder-[#666262] focus:outline-none focus:border-[#171819] focus:ring-0"
+                                rows="5" name="cf-message" placeholder="پیام"></textarea>
+                            <button type="submit"
+                                class="w-full p-4 bg-[#171819] text-white font-[Gandom] font-bold rounded-sm hover:bg-[#f13a11] transition-all duration-300 ease-in-out"
+                                id="submit-button" name="submit">ارسال پیام</button>
+                        </form>
+                    </div>
+
+                    <!-- LOCATION SECTION -->
+                    <div class="lg:w-1/2 w-full" dir="rtl">
+                        <h2 class="text-4xl text-[#25262A] font-[BnazaninBold] mb-6">کجا می‌توانید ما را پیدا کنید</h2>
+
+                        <p class="mb-4 flex items-center font-[Gandom] text-[#666262] text-lg">
+                            <i class="fa fa-map-marker-alt ml-2 text-[#f13a11]"></i> ١٢۰ - ٢۴۰ ریو دو ژانیرو - ایالت ریو
+                            دو ژانیرو، برزیل
+                        </p>
+                        <div class="google-map">
+                            <iframe
+                                src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- CONTACT END -->
+
+
         <script src="./js/contact-us.js"></script>
     </main>
 
