--- a/contact-us.html
+++ b/contact-us.html
@@ -125,7 +125,7 @@
         <section class="contact py-16" id="contact">
             <div class="container mx-auto">
                 <div
-                    class="flex flex-col md:flex-row lg:space-x-8 space-y-8 md:space-y-0 justify-center py-28 px-14 gap-x-6 lg:gap-14">
+                    class="flex flex-col md:flex-row lg:space-x-8 space-y-8 md:space-y-0 justify-center pt-28 px-14 gap-6 lg:gap-14">
 
                     <!-- FORM SECTION -->
                     <div class="xl:w-[32%] w-full" dir="rtl">
