--- a/contact-us.html
+++ b/contact-us.html
@@ -155,7 +155,7 @@
                             <i class="fa fa-map-marker-alt ml-2 text-[#f13a11]"></i> ١٢۰ - ٢۴۰ ریو دو ژانیرو - ایالت ریو
                             دو ژانیرو، برزیل
                         </p>
-                        <div class="google-map lg:mt-16 border-t-[1px] border-[#efebeb] pt-8 lg:pt-14">
+                        <div class="google-map lg:mt-16 border-t-[1px] border-[#efebeb] pt-[26px] lg:pt-14">
                             <iframe
                                 src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
                                 width="99%" height="260" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
