--- a/about-us.html
+++ b/about-us.html
@@ -121,6 +121,104 @@
         </header>
         <!-- HEADER END -->
 
+        <!-- ABOUT US START -->
+        <section class="about section rtl pt-48 pb-32 md:pb-36" id="about">
+            <div class="container mx-auto px-4">
+                <div class="flex flex-wrap justify-center gap-x-20 items-center">
+
+                    <!-- DESCRIPTION TEXT -->
+                    <div class="w-[500px] lg:w-[35%] md:w-10/12 mb-12 lg:mt-5 lg:mb-0 text-right" dir="rtl">
+                        <h2 class="text-[42px] font-[BnazaninBold] text-[#25262A] mb-8">سلام، ما جیمسو هستیم
+                        </h2>
+
+                        <p class="text-[#666262] font-[Gandom] text-lg mb-4 w-full">
+                            شما اجازه ندارید این فایل الگوی HTML را در هیچ سایت مجموعه‌ای مجدداً توزیع کنید. شما اجازه
+                            دارید از این قالب برای وب‌سایت‌های شخصی یا تجاری خود استفاده کنید.
+                        </p>
+
+                        <p class="text-[#666262] font-[Gandom] text-lg w-full">
+                            اگر سوالی در مورد <a class="text-[#404040] font-semibold"
+                                href="https://www.tooplate.com/view/2119-gymso-fitness">قالب HTML Gymso
+                                Fitness</a> دارید، می‌توانید فوراً با <a class="text-[#404040] font-semibold"
+                                href="https://www.tooplate.com/contact">Tooplate</a> تماس بگیرید. با
+                            تشکر.
+                        </p>
+                    </div>
+
+                    <!-- TRAINERS -->
+                    <div class="flex flex-col md:flex-row gap-9">
+
+                        <!-- FIRST TRAINER -->
+                        <div class="w-[500px] md:w-[330px] lg:w-[230px] xl:w-[250px] mb-5 lg:mb-0 lg:ml-auto ">
+                            <div class="relative">
+                                <img src="./assets/images/team/team-image.jpg" class="w-full" alt="مربی">
+
+                                <div class="team-info bg-white p-5 rounded-b-lg shadow-xl flex flex-col items-start">
+                                    <h3 class="text-3xl font-[BnazaninBold] text-[#25262A]">مری یان</h3>
+                                    <span class="text-[#666262]">مربی یوگا</span>
+
+                                    <ul class="flex flex-col absolute right-8 bottom-4 mt-3 text-lg">
+                                        <li><a href="https://twitter.com/" class="text-[#666262]"><i
+                                                    class="fab fa-twitter"></i></a></li>
+                                        <li><a href="https://www.instagram.com/" class="text-[#666262]"><i
+                                                    class="fab fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- SECOND TRAINER -->
+                        <div class="w-[500px] md:w-[330px] lg:w-[230px] xl:w-[250px]">
+                            <div class="relative">
+                                <img src="./assets/images/team/team-image01.jpg" class="w-full" alt="مربی">
+
+                                <div class="team-info bg-white p-5 rounded-b-lg shadow-xl flex flex-col items-start">
+                                    <h3 class="text-3xl font-[BnazaninBold] text-[#25262A]">کاترینا</h3>
+                                    <span class="text-[#666262]">مربی بدن‌سازی</span>
+
+                                    <ul class="flex flex-col absolute right-8 bottom-4 mt-3 text-lg">
+                                        <li><a href="https://www.instagram.com/" class="text-[#666262]"><i
+                                                    class="fab fa-instagram"></i></a></li>
+                                        <li><a href="https://www.facebook.com/" class="text-[#666262]"><i
+                                                    class="fab fa-facebook"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- ABOUT US END -->
+
+        <!-- FOOTER START -->
+        <footer class="bg-white border-t border-gray-200 py-16">
+            <div class="container mx-auto">
+                <div class="flex flex-wrap justify-between font-[Gandom] gap-5">
+
+                    <div class="w-full md:w-5/12 text-center md:text-right">
+                        <p class="text-[#666262]">کپی رایت &copy; ٢۰٢۴ شرکت جیمسو فیتنس
+                            <br>طراحی: <a href="https://www.tooplate.com" class="text-[#666262]">علی مالکی</a>
+                        </p>
+                    </div>
+
+                    <div class="flex justify-center md:w-6/12 w-full text-right mb-6">
+                        <p class="mr-4 flex items-center">
+                            <i class="fa-regular fa-envelope text-[#f13a11] mr-2"></i>
+                            <a href="#" class="text-[#666262]">hello@company.co</a>
+                        </p>
+
+                        <p class="ml-8 flex items-center text-[#666262]">
+                            <i class="fa fa-phone text-[#f13a11] mr-2"></i> ۰١۰ - ۰٢۰ - ۰٨۴۰
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- FOOTER END -->
+
         <script src="./js/about-us.js"></script>
     </main>
 
