--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8" />
@@ -46,7 +46,7 @@
               </div>
               <div class="hidden lg:block sm:mr-3" dir="rtl">
                 <div class="flex space-x-2">
-                  <a href="./home.html"
+                  <a href="#home"
                     class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">خانه</a>
                   <a href="./about-us.html"
                     class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] px-5 py-2 font-[BnazaninBold] text-xl">درباره
@@ -82,7 +82,7 @@
         <!-- MOBILE MENU -->
         <div class="lg:hidden hidden" id="mobile-menu">
           <div class="px-2 pt-2 pb-3 space-y-1 text-center">
-            <a href="./home.html"
+            <a href="#home"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">خانه</a>
             <a href="./about-us.html"
               class="text-white hover:text-[#f13a11] transition-all duration-[0.4s] block px-3 py-2 font-[BnazaninBold] text-lg">درباره
@@ -118,7 +118,7 @@
     <!-- HEADER END -->
 
     <!-- SECTION-1 START -->
-    <section class="bg-[#171819] text-white h-screen">
+    <section class="bg-[#171819] text-white h-screen" id="home">
       <div class="relative h-full flex items-center justify-center">
         <!-- Background Image -->
         <img src="./assets/images/hero-bg.jpg" alt="Gymso Fitness" class="absolute inset-0 w-full h-full object-cover">
