--- a/about-us.html
+++ b/about-us.html
@@ -137,9 +137,11 @@
                         </p>
 
                         <p class="text-[#666262] font-[Gandom] text-lg w-full">
-                            اگر سوالی در مورد <a class="text-[#404040] font-semibold"
+                            اگر سوالی در مورد <a
+                                class="text-[#404040] font-semibold hover:text-[#f13a11] transition-all duration-[0.4s]"
                                 href="https://www.tooplate.com/view/2119-gymso-fitness">قالب HTML Gymso
-                                Fitness</a> دارید، می‌توانید فوراً با <a class="text-[#404040] font-semibold"
+                                Fitness</a> دارید، می‌توانید فوراً با <a
+                                class="text-[#404040] font-semibold hover:text-[#f13a11] transition-all duration-[0.4s]"
                                 href="https://www.tooplate.com/contact">Tooplate</a> تماس بگیرید. با
                             تشکر.
                         </p>
@@ -149,42 +151,11 @@
                     <div class="flex flex-col md:flex-row gap-9">
 
                         <!-- FIRST TRAINER -->
-                        <div class="w-[500px] md:w-[330px] lg:w-[230px] xl:w-[250px] mb-5 lg:mb-0 lg:ml-auto ">
-                            <div class="relative">
-                                <img src="./assets/images/team/team-image.jpg" class="w-full" alt="مربی">
-
-                                <div class="team-info bg-white p-5 rounded-b-lg shadow-xl flex flex-col items-start">
-                                    <h3 class="text-3xl font-[BnazaninBold] text-[#25262A]">مری یان</h3>
-                                    <span class="text-[#666262]">مربی یوگا</span>
-
-                                    <ul class="flex flex-col absolute right-8 bottom-4 mt-3 text-lg">
-                                        <li><a href="https://twitter.com/" class="text-[#666262]"><i
-                                                    class="fab fa-twitter"></i></a></li>
-                                        <li><a href="https://www.instagram.com/" class="text-[#666262]"><i
-                                                    class="fab fa-instagram"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="w-[500px] md:w-[330px] lg:w-[230px] xl:w-[250px] mb-5 lg:mb-0 lg:ml-auto"
+                            id="FirstTrainer-root"></div>
 
                         <!-- SECOND TRAINER -->
-                        <div class="w-[500px] md:w-[330px] lg:w-[230px] xl:w-[250px]">
-                            <div class="relative">
-                                <img src="./assets/images/team/team-image01.jpg" class="w-full" alt="مربی">
-
-                                <div class="team-info bg-white p-5 rounded-b-lg shadow-xl flex flex-col items-start">
-                                    <h3 class="text-3xl font-[BnazaninBold] text-[#25262A]">کاترینا</h3>
-                                    <span class="text-[#666262]">مربی بدن‌سازی</span>
-
-                                    <ul class="flex flex-col absolute right-8 bottom-4 mt-3 text-lg">
-                                        <li><a href="https://www.instagram.com/" class="text-[#666262]"><i
-                                                    class="fab fa-instagram"></i></a></li>
-                                        <li><a href="https://www.facebook.com/" class="text-[#666262]"><i
-                                                    class="fab fa-facebook"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="w-[500px] md:w-[330px] lg:w-[230px] xl:w-[250px]" id="SecondTrainer-root"></div>
 
                     </div>
 
